--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,12 +38,75 @@ body {
     margin: 0 auto;
     overflow-x: hidden;
     font-family: $font-primary;
-    
+    background-color: $color-black;
+    color: $color-grey;
+
 
 
 
 }
 
-// main {
-    
-// }
+main {
+    padding: 1rem;
+}
+
+.master-container {
+    max-width: 1140px;
+    margin: 0 auto;
+    margin-top: 25px;
+}
+
+.h-xl {
+    font-size: 88px;
+    line-height: 88px;
+    letter-spacing: -2.5px;
+    color: #FFF;
+}
+
+.h-l {
+    font-size: 48px;
+    line-height: 56px;
+    letter-spacing: -1.5px;
+    color: #FFF;
+}
+
+.h-m {
+    font-size: 24px;
+    line-height: 32px;
+    color: #FFF;
+
+}
+
+.body-text {
+    font-size: 18px;
+    line-height: 28px;
+}
+
+.cta {
+    text-transform: uppercase;
+    letter-spacing: 2.29px;
+    border-bottom: 2px solid $color-green;
+    max-width: 120px;
+
+    padding-bottom: 0.5rem;
+    cursor: pointer;
+    color: #FFF;
+}
+
+.cta-projects {
+
+    cursor: pointer;
+}
+
+.cta-projects-item {
+    max-width: none;
+}
+
+
+
+.cta-header {
+    margin: 0 auto;
+    margin-top: 24px;
+    cursor: pointer;
+}
+
