--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,7 @@ $color-dark-grey: #242424;
 $color-green: #4EE1A0;
 $color-grey: #D9D9D9;
 $color-white: #FFFF;
+$color-red: #FF6F5B;
 
 $font-primary: 'Space Grotesk',
 serif;
@@ -87,7 +88,7 @@ main {
     letter-spacing: 2.29px;
     border-bottom: 2px solid $color-green;
     max-width: 120px;
-
+    text-decoration: none;
     padding-bottom: 0.5rem;
     cursor: pointer;
     color: #FFF;
@@ -110,3 +111,19 @@ main {
     cursor: pointer;
 }
 
+// FOOTER
+
+.footer {
+    background-color: $color-dark-grey;
+    text-align: center;
+
+    &__inner {
+        border-top: 2px solid $color-white;
+        width: 90%;
+        margin: 0 auto;
+        padding-top: 3rem;
+        padding-bottom: 2rem;
+    }
+
+
+}
