--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -29,6 +29,7 @@
         gap: 1rem;
         margin: 0 auto;
         margin-bottom: 40px;
+       
     }
 
     &__img {
@@ -56,6 +57,7 @@
     }
 }
 
-p.cta-projects-item:nth-child(2) {
+a.cta:nth-child(2) {
     margin-left: 2rem;
-}
+   }
+   
