--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,8 @@ main {
   text-align: center; }
   .header__profile-pic {
     width: 174px;
-    margin: 0 auto; }
+    margin: 0 auto;
+    margin-bottom: 40px; }
   .header__inner-container {
     min-width: 325px;
     max-width: 600px;
@@ -412,7 +413,10 @@ main {
   .header__heading {
     font-size: 40px;
     line-height: 40px;
-    color: #FFF; }
+    color: #FFF;
+    max-width: 362px;
+    margin: 0 auto;
+    margin-bottom: 40px; }
   .header__description {
     font-size: 16px;
     max-width: 348px;
