--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -21,7 +21,8 @@ $bp-desktop : 62.5em; //1000
     box-sizing: inherit;
 }
 
-
+$bp-tablet : 37.5em; //600
+$bp-desktop : 62.5em; //1000
 
 html {
 
@@ -109,6 +110,12 @@ main {
     margin: 0 auto;
     margin-top: 24px;
     cursor: pointer;
+
+    @media only screen and (min-width: $bp-tablet) {
+        grid-column: 1/1;
+        margin: 0;
+    }
+
 }
 
 // FOOTER
@@ -123,6 +130,13 @@ main {
         margin: 0 auto;
         padding-top: 3rem;
         padding-bottom: 2rem;
+
+        @media only screen and (min-width: $bp-tablet) {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+        }
     }
 
 
