--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,10 @@ main {
   margin: 0 auto;
   margin-top: 24px;
   cursor: pointer; }
+  @media only screen and (min-width: 37.5em) {
+    .cta-header {
+      grid-column: 1/1;
+      margin: 0; } }
 
 .footer {
   background-color: #242424;
@@ -383,6 +387,11 @@ main {
     margin: 0 auto;
     padding-top: 3rem;
     padding-bottom: 2rem; }
+    @media only screen and (min-width: 37.5em) {
+      .footer__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center; } }
 
 .navigation {
   text-align: center;
@@ -391,25 +400,69 @@ main {
   margin-right: auto;
   left: 0;
   right: 0; }
+  @media only screen and (min-width: 37.5em) {
+    .navigation {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 2rem;
+      position: static; } }
   .navigation__social {
     margin-top: 20px;
     display: flex;
     justify-content: center;
     gap: 1.2rem; }
+    @media only screen and (min-width: 37.5em) {
+      .navigation__social {
+        margin: 0;
+        z-index: 10; } }
 
 .header {
   text-align: center; }
+  .header__picture {
+    grid-column: 2 / 2; }
+    @media only screen and (min-width: 37.5em) {
+      .header__picture {
+        grid-row: 1 / -1;
+        position: absolute;
+        right: 0;
+        top: 0;
+        margin-bottom: 60px;
+        z-index: -9999; } }
   .header__profile-pic {
     width: 174px;
     margin: 0 auto;
     margin-bottom: 40px; }
+    @media only screen and (min-width: 37.5em) {
+      .header__profile-pic {
+        width: 359px; } }
   .header__inner-container {
     min-width: 325px;
     max-width: 600px;
     margin: 0 auto;
     background-image: url(../img/pattern-rings.svg), url(../img/pattern-circle.svg);
     background-repeat: no-repeat, no-repeat;
-    background-position: -340px 120px, 120% 70%; }
+    background-position: -340px 120px, 120% 46%; }
+    @media only screen and (min-width: 37.5em) {
+      .header__inner-container {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr;
+        grid-template-rows: min-content min-content min-content;
+        margin-top: 40px;
+        grid-column: 2/2;
+        max-width: none;
+        min-width: none;
+        background-position: -340px 50px, 110% 100%; } }
+  @media only screen and (min-width: 37.5em) {
+    .header__left-content {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      margin-left: 2rem;
+      grid-column: 1/3;
+      margin-top: 7rem;
+      word-break: break-word;
+      max-width: 460px; } }
   .header__heading {
     font-size: 40px;
     line-height: 40px;
@@ -417,17 +470,42 @@ main {
     max-width: 362px;
     margin: 0 auto;
     margin-bottom: 40px; }
+    @media only screen and (min-width: 37.5em) {
+      .header__heading {
+        grid-row: 1 / 1;
+        margin-bottom: 0;
+        text-align: left;
+        font-size: 72px;
+        line-height: 72px;
+        z-index: 200;
+        max-width: none; } }
   .header__description {
     font-size: 16px;
     max-width: 348px;
     min-width: 325px;
     margin: 0 auto; }
+    @media only screen and (min-width: 37.5em) {
+      .header__description {
+        grid-row: 2 / 2;
+        z-index: 300;
+        text-align: left;
+        margin: 0;
+        margin-top: 60px; } }
 
 .underline {
   text-decoration: underline;
   text-decoration-thickness: 4px;
   text-decoration-color: #4EE1A0;
   text-underline-offset: 12px; }
+
+@media only screen and (min-width: 37.5em) {
+  .heading-top {
+    display: block; } }
+
+@media only screen and (min-width: 37.5em) {
+  .heading-top {
+    display: block;
+    width: 490px; } }
 
 .social-icon {
   cursor: pointer; }
@@ -443,31 +521,50 @@ main {
   padding-bottom: 3.5rem;
   margin-bottom: 5rem;
   position: relative; }
+  @media only screen and (min-width: 37.5em) {
+    .experience {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      border-bottom: none; } }
   .experience__item {
     margin: 0 auto;
     max-width: 170px;
     text-align: center;
     max-width: 75%; }
+    @media only screen and (min-width: 37.5em) {
+      .experience__item {
+        margin: 0;
+        max-width: none;
+        text-align: left; } }
   .experience__skill {
     font-size: 32px;
     letter-spacing: -1px;
     font-weight: 700;
     margin-bottom: 10px;
     color: #FFF; }
+    @media only screen and (min-width: 37.5em) {
+      .experience__skill {
+        font-size: 48px;
+        margin-bottom: 30px; } }
   .experience__time {
     font-size: 16px; }
   .experience__rings {
     position: absolute;
     bottom: 0;
     bottom: -47px;
-    lefT: 224px; }
+    left: 224px; }
+    @media only screen and (min-width: 37.5em) {
+      .experience__rings {
+        bottom: 0%;
+        left: 74%; } }
 
 .projects__heading {
   font-weight: 700;
   font-size: 40px;
   line-height: 40px;
   letter-spacing: -1.13636px;
-  color: #FFF; }
+  color: #FFF;
+  font-size: clamp(40px, 8vw, 88px); }
 
 .projects__top {
   display: flex;
@@ -475,6 +572,13 @@ main {
 
 .gallery {
   margin-top: 40px; }
+  @media only screen and (min-width: 37.5em) {
+    .gallery {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem; } }
+  .gallery__profile-pic {
+    width: 100%; }
   .gallery__item {
     display: flex;
     flex-direction: column;
@@ -503,6 +607,10 @@ a.cta:nth-child(2) {
 .contact {
   background-color: #242424;
   padding: 5rem 1rem; }
+  @media only screen and (min-width: 37.5em) {
+    .contact__inner-container {
+      width: 445px;
+      margin: 0 auto; } }
   .contact__left-content {
     text-align: center;
     margin-bottom: 50px; }
@@ -510,6 +618,10 @@ a.cta:nth-child(2) {
     font-size: 40px;
     color: #FFF;
     margin-bottom: 20px; }
+    @media only screen and (min-width: 37.5em) {
+      .contact__heading {
+        font-size: 72px;
+        padding-bottom: 1rem; } }
   .contact__rings {
     position: absolute;
     bottom: 10px;
