--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,4 +1,3 @@
-
 // PROJECTS
 
 .projects {
@@ -9,6 +8,7 @@
         line-height: 40px;
         letter-spacing: -1.13636px;
         color: #FFF;
+        font-size: clamp(40px, 8vw, 88px);
     }
 
     &__top {
@@ -22,6 +22,17 @@
 .gallery {
     margin-top: 40px;
 
+    @media only screen and (min-width: $bp-tablet) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+
+    }
+
+    &__profile-pic {
+        width: 100%;
+    }
+
 
     &__item {
         display: flex;
@@ -29,7 +40,7 @@
         gap: 1rem;
         margin: 0 auto;
         margin-bottom: 40px;
-       
+
     }
 
     &__img {
@@ -59,5 +70,4 @@
 
 a.cta:nth-child(2) {
     margin-left: 2rem;
-   }
-   
+}
