--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -1,5 +1,3 @@
-// PROJECTS
-
 .projects {
 
     &__heading {
@@ -14,6 +12,11 @@
     &__top {
         display: flex;
         justify-content: space-between;
+
+        @media only screen and (min-width: $bp-desktop) {
+            margin-bottom: 80px;
+
+        }
     }
 }
 
@@ -41,11 +44,37 @@
         margin: 0 auto;
         margin-bottom: 40px;
 
+        @media only screen and (min-width: $bp-desktop) {
+            position: relative;
+        }
+
     }
 
     &__img {
         width: 100%;
         margin-bottom: 10px;
+    }
+
+    &__image-overlay {
+
+        @media only screen and (min-width: $bp-desktop) {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: calc(100% - 90px);
+            width: 100%;
+            opacity: 0;
+            transition: .5s ease;
+            background-color: RGBA(0, 0, 0, 0.6);
+            cursor: pointer;
+
+        }
+
+        &:hover {
+            opacity: 1;
+        }
     }
 
     &__title {
@@ -65,9 +94,69 @@
 
     &__links {
         display: flex;
+
+        @media only screen and (min-width: $bp-desktop) {
+            display: none;
+            position: absolute;
+            flex-direction: column;
+            left: 42%;
+            top: 31%;
+            gap: 2rem;
+
+
+
+        }
+
+
     }
+
+    &__image-overlay-container {
+        @media only screen and (min-width: $bp-desktop) {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 40%;
+            left: 40%;
+            gap: 1rem;
+
+        }
+    }
+
+
+
+
+
+
 }
 
 a.cta:nth-child(2) {
     margin-left: 2rem;
+    @media only screen and (min-width: $bp-desktop) {
+       margin: 0;
+       text-align: center;
+
+    }
 }
+
+.cta.cta-projects-item.link-overlay {
+    display: none;
+
+    @media only screen and (min-width: $bp-desktop) {
+      display: block; 
+
+    }
+}
+
+// .gallery__item:hover > .gallery__links {
+
+//     @media only screen and (min-width: $bp-desktop) {
+//         display: flex;
+//         flex-direction: column;
+
+//     }
+    
+//   }
+
+//   .cta-projects-item:hover > .gallery__image-overlay {
+//     opacity: 1;
+//   }
