--- a/css/style.css
+++ b/css/style.css
@@ -381,20 +381,12 @@ main {
       grid-column: 1/1;
       margin: 0; } }
 
-.footer {
-  background-color: #242424;
-  text-align: center; }
-  .footer__inner {
-    border-top: 2px solid #FFFF;
-    width: 90%;
-    margin: 0 auto;
-    padding-top: 3rem;
-    padding-bottom: 2rem; }
-    @media only screen and (min-width: 37.5em) {
-      .footer__inner {
-        display: flex;
-        justify-content: space-between;
-        align-items: center; } }
+svg {
+  cursor: pointer; }
+
+@media only screen and (min-width: 62.5em) {
+  svg:hover path {
+    fill: #4EE1A0; } }
 
 .navigation {
   text-align: center;
@@ -665,7 +657,7 @@ main {
       width: 100%;
       opacity: 0;
       transition: .5s ease;
-      background-color: RGBA(0, 0, 0, 0.6);
+      background-color: RGBA(0, 0, 0, 0.7);
       cursor: pointer; } }
   .gallery__image-overlay:hover {
     opacity: 1; }
@@ -714,13 +706,28 @@ a.cta:nth-child(2) {
 .contact {
   background-color: #242424;
   padding: 5rem 1rem; }
+  @media only screen and (min-width: 62.5em) {
+    .contact {
+      width: 100vw; } }
   @media only screen and (min-width: 37.5em) {
     .contact__inner-container {
       width: 445px;
       margin: 0 auto; } }
+  @media only screen and (min-width: 62.5em) {
+    .contact__inner-container {
+      width: 1140px;
+      display: flex;
+      justify-content: space-between; } }
   .contact__left-content {
     text-align: center;
     margin-bottom: 50px; }
+    @media only screen and (min-width: 62.5em) {
+      .contact__left-content {
+        text-align: initial;
+        margin-top: 32px; } }
+  @media only screen and (min-width: 62.5em) {
+    .contact__right-content {
+      width: 445px; } }
   .contact__heading {
     font-size: 40px;
     color: #FFF;
@@ -729,10 +736,17 @@ a.cta:nth-child(2) {
       .contact__heading {
         font-size: 72px;
         padding-bottom: 1rem; } }
+    @media only screen and (min-width: 62.5em) {
+      .contact__heading {
+        font-size: 88px;
+        margin-bottom: 36px; } }
   .contact__rings {
     position: absolute;
     bottom: 10px;
     lefT: -400px; }
+    @media only screen and (min-width: 62.5em) {
+      .contact__rings {
+        lefT: -1055px; } }
   .contact__description {
     max-width: 343px;
     margin: 0 auto; }
@@ -791,7 +805,23 @@ textarea {
   background-color: transparent;
   padding-top: 1rem;
   padding-left: 1rem;
-  font-size: 14px; }
+  font-size: 14px;
+  resize: none; }
 
 div.form-control:nth-child(3) > img:nth-child(3) {
   top: 0; }
+
+.footer {
+  background-color: #242424;
+  text-align: center; }
+  .footer__inner {
+    border-top: 2px solid #FFFF;
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 3rem;
+    padding-bottom: 2rem; }
+    @media only screen and (min-width: 37.5em) {
+      .footer__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center; } }
