--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -126,26 +126,16 @@ main {
 
 }
 
-// FOOTER
 
-.footer {
-    background-color: $color-dark-grey;
-    text-align: center;
 
-    &__inner {
-        border-top: 2px solid $color-white;
-        width: 90%;
-        margin: 0 auto;
-        padding-top: 3rem;
-        padding-bottom: 2rem;
+svg {
+    cursor: pointer;
+    
+}
 
-        @media only screen and (min-width: $bp-tablet) {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-        }
+svg:hover path {
+    @media only screen and (min-width: $bp-desktop) {
+        fill: #4EE1A0;     
     }
-
-
+      
 }
