--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -2,17 +2,39 @@
     background-color: $color-dark-grey;
     padding: 5rem 1rem;
 
+    @media only screen and (min-width: $bp-desktop) {
+        width: 100vw;
+    }
+
     &__inner-container {
         @media only screen and (min-width: $bp-tablet) {
             width: 445px;
             margin: 0 auto;
 
         }
+
+        @media only screen and (min-width: $bp-desktop) {
+            width: 1140px;
+            display: flex;
+            justify-content: space-between;
+            // align-items: center;
+        }
     }
 
     &__left-content {
         text-align: center;
         margin-bottom: 50px;
+
+        @media only screen and (min-width: $bp-desktop) {
+          text-align: initial; 
+          margin-top: 32px; 
+        }
+    }
+
+    &__right-content {
+        @media only screen and (min-width: $bp-desktop) {
+            width: 445px;
+        }
     }
 
     &__heading {
@@ -25,18 +47,30 @@
             padding-bottom: 1rem;
 
         }
+
+        @media only screen and (min-width: $bp-desktop) {
+            font-size: 88px;
+            margin-bottom: 36px;
+        }
     }
 
     &__rings {
         position: absolute;
         bottom: 10px;
         lefT: -400px;
+
+        @media only screen and (min-width: $bp-desktop) {
+            lefT: -1055px;
+        }
     }
 
     &__description {
         max-width: 343px;
         margin: 0 auto;
     }
+
+    
+    
 }
 
 
@@ -91,10 +125,7 @@ input {
     margin-top: 32px;
     padding-bottom: 1rem;
 
-    // &:hover {
-    //     color: $color-green;
-    //     border-bottom: 2px solid $color-green;
-    // }
+
 }
 
 .error-message {
@@ -117,6 +148,7 @@ textarea {
     padding-top: 1rem;
     padding-left: 1rem;
     font-size: 14px;
+    resize: none;
 
 
 
